# thgame

./: CMakeLists.txt  README.md
packer/: packer.py
src/: main.cpp
src/game/: assets.cpp  assets.h  font.cpp  font.h  game.cpp  game.h
src/math/: type.h
src/player/: player.cpp  player.h  reimu.cpp  reimu.h
src/scene/: scene.cpp  scene.h  title_scene.cpp  title_scene.h
src/sprite/: animated_sprite.cpp  animated_sprite.h  image_sprite.cpp  image_sprite.h  sprite.cpp  sprite.h
src/ui/: rendering_text.cpp  rendering_text.h
